--- a/GeometryLib/GeometryLib.csproj
+++ b/GeometryLib/GeometryLib.csproj
@@ -40,10 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArrayUtil.cs" />
-    <Compile Include="CubicSpline.cs" />
+    <Compile Include="Math\Matrix.cs" />
+    <Compile Include="Util\ArrayUtil.cs" />
+    <Compile Include="Interpolation\CubicSpline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TriDiagonalMatrix.cs" />
+    <Compile Include="Math\TriDiagonalMatrix.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
