Fixed locale for number parsing, tag 1.0.0.3

--- a/ArtyCalc/ArtyCalc.csproj
+++ b/ArtyCalc/ArtyCalc.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E99366E1-47DC-4E82-9D36-C1F9D73184D9}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ArtyCalc</RootNamespace>
     <AssemblyName>ArtyCalc</AssemblyName>
